# gemini-test

./: .env.tpl  .gitattributes  .gitignore  README.md  README_en.md  README_zh-CN.md  pyproject.toml  test.properties
.gemini/: styleguide.md
app/: main.py
src/: financial.py  finnhub_test.py  i18n_props.py  i18n_readme.py  i18n_tool.py  pdf_to_markdown.py  site_snap.py  translate.py  transprop.py
src/utils/: unicode.py
