[project]
name = "gemini-test"
version = "0.1.0"
description = "Gemini Ai Test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "finnhub-python>=2.4.23",
    "google-genai>=1.10.0",
    "load-dotenv>=0.1.0",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
